--- a/FRONT/public/manifest.json
+++ b/FRONT/public/manifest.json
@@ -1,6 +1,7 @@
+
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "My empresa",
+  "name": "maninng your businnes",
   "icons": [
     {
       "src": "favicon.ico",
